# jwtgen

./: .gitignore  README.md  pyproject.toml
configs/: envs.example.yaml
configs/payloads/: admin_service.json  generic.json
docs/: commands.sh
src/jwtgen/application/: dto.py  jwt_service.py
src/jwtgen/cli/: main.py
src/jwtgen/config/: loader.py  models.py
src/jwtgen/crypto/: key_material.py  signer.py
src/jwtgen/domain/: claims.py  identifiers.py  templates.py
tests/: test_identifiers.py
