[project]
name = "jwtgen"
version = "0.1.0"
description = "CLI para generar JWT RS256 por ambiente y perfiles (config YAML)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "PyYAML>=6.0.2",
  "pydantic>=2.7.0",
  "PyJWT>=2.8.0",
  "cryptography>=42.0.0",
]

[project.scripts]
jwtgen = "jwtgen.cli.main:app"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]